# gmerlin-effectv

./: ChangeLog  Makefile.am  README  configure.ac
include/: config.h.in  gmerlin_effectv.h
lib/: Makefile.am
m4/: check_funcs.m4
plugins/: Makefile.am  fv_burningtv.c  fv_chameleontv.c  fv_colstreaktv.c  fv_dicetv.c  fv_difftv.c  fv_displaywalltv.c  fv_dottv.c  fv_edgeblurtv.c  fv_firetv.c  fv_halftv.c  fv_lenstv.c  fv_matrixtv.c  fv_nervoustv.c  fv_optv.c  fv_puptv.c  fv_rdstv.c  fv_revtv.c  fv_rippletv.c  fv_rndmtv.c  fv_shagadelictv.c  fv_simuratv.c  fv_sparktv.c  fv_spiraltv.c  fv_transformtv.c  fv_vertigotv.c
po/: ChangeLog  POTFILES.in  de.gmo
